--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0",
+    "astro": "^1.6.14",
     "prettier-plugin-astro": "^0.7.0"
   },
   "dependencies": {
-    "cypress": "^10.0.3"
+    "@astrojs/tailwind": "^2.1.3",
+    "cypress": "^10.0.3",
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.0"
   }
 }
